[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "setuptools_scm>=6.0",
    "tomli"
]

build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "google-generativeai==0.5.4",
    "deepl==1.16.1",
    "openai==1.29.0",
    "backoff==2.2.1",
    "tiktoken==0.6.0",
    "google-cloud-translate==3.15.3",
    "anthropic==0.26.0"
]

name = "easytl"
version = "v0.4.0-alpha-3"
authors = [
  { name="Bikatr7", email="Bikatr7@proton.me" },
]
description = "Seamless Multi-API Translation: Simplifying Language Barriers with DeepL, OpenAI, Gemini and Google Translate."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Bikatr7/EasyTL"
Issues = "https://github.com/Bikatr7/EasyTL/issues"
